Streamlining the create average brain process

--- a/src/atlas/notebooks/allen.atlas.comparison.ipynb
+++ b/src/atlas/notebooks/allen.atlas.comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,26 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_distance(com1, com2):\n",
-    "    return (np.linalg.norm(com1 - com2))\n",
-    "def pad_volume(volume, padto):\n",
-    "    rdiff = padto[2] - volume.shape[2]\n",
-    "    cdiff = padto[1] - volume.shape[1]\n",
-    "    print(rdiff,cdiff)    \n",
-    "    cs = 0\n",
-    "    ce = cdiff\n",
-    "    rs = 0\n",
-    "    re = rdiff\n",
-    "    return np.pad(volume, [[0, 0], [cs, ce], [rs, re]], constant_values=(0))\n"
+    "    return (np.linalg.norm(com1 - com2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,42 +38,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(dtype('uint16'), (456, 370, 628))"
+       "(dtype('uint16'), (528, 320, 456))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "allen_path = os.path.join(atlaspath, 'Allen_25um_sagittal.tif')\n",
+    "allen_path = os.path.join(atlaspath, 'Allen_25um_coronal.tif')\n",
     "allen_img = io.imread(allen_path)\n",
     "allen_img.dtype, allen_img.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(dtype('uint8'), (447, 586, 790))"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "inpath = os.path.join(atlaspath, 'MD589_25um_sagittal.tif')\n",
     "MD589_img = io.imread(inpath)\n",
@@ -91,35 +71,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "162 216\n"
+      "sagittal shape=(456, 320, 528) dtype=uint16\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_726582/2436053990.py:3: UserWarning: /net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/Allen_25um_sagittal.tif is a low contrast image\n",
-      "  io.imsave(savepath, padded)\n"
+      "/tmp/ipykernel_1237166/2420175636.py:7: UserWarning: /net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/Allen_25um_sagittal.tif is a low contrast image\n",
+      "  io.imsave(savepath, sagittal)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(456, 586, 790)"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "sagittal = np.swapaxes(allen_img,0,2)\n",
+    "print(f'sagittal shape={sagittal.shape} dtype={sagittal.dtype}')\n",
+    "savepath = os.path.join(atlaspath, 'Allen_25um_sagittal.tif')\n",
+    "io.imsave(savepath, sagittal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "padded = pad_volume(allen_img, MD589_img.shape)\n",
     "savepath = os.path.join(atlaspath, 'Allen_25um_sagittal.tif')\n",
@@ -129,40 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sagittal = np.swapaxes(allen_img,0,2)\n",
-    "sagittal = np.rot90(sagittal, axes=(0, 1))\n",
-    "sagittal = np.flip(sagittal, axis=1)\n",
-    "sagittal = np.flip(sagittal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_midbrain_allen' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[48], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mlen\u001b[39m(\u001b[43mdf_midbrain_allen\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_midbrain_allen' is not defined"
-     ]
-    }
-   ],
    "source": [
     "len(df_midbrain_allen)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,14 +151,18 @@
     "    title += f'  distance={round(distance,2)} um'\n",
     "    plt.title(title)\n",
     "    ax = plt.gca()\n",
-    "    ax.set_xlim([0, 600])\n",
+    "    ax.set_xlim([300, 600])\n",
+    "    ax.set_ylim(300,0)\n",
     "    plt.scatter(x1/25, y1/25, s=40, marker='^', c='b', label=str('Allen ' + structure))\n",
     "    plt.scatter(x2/25, y2/25, s=40, marker='o', c='g', label=str('Atlas ' + structure))\n",
     "    plt.imshow(slice, cmap='gray')\n",
     "    plt.legend()\n",
     "    plt.close()\n",
-    "    outpath = os.path.join(distancepath, f'{structure}.pdf')\n",
+    "    outpath = os.path.join(distancepath, 'eps', f'{structure}.eps')\n",
+    "    fig.savefig(outpath, bbox_inches=\"tight\", format='eps')\n",
+    "    outpath = os.path.join(distancepath, f'{structure}.png')\n",
     "    fig.savefig(outpath, bbox_inches=\"tight\")\n",
+    "    \n",
     "    distances.append(distance)\n",
     "    sortme[structure] = distance\n"
    ]
@@ -256,7 +218,9 @@
     "    ax.set_ylim([0,1200])\n",
     "    #ax.legend(title='Error color')\n",
     "    plt.close()\n",
-    "    outpath = os.path.join(distancepath, f'{structure}_error.pdf')\n",
+    "    outpath = os.path.join(distancepath, 'eps', f'{structure}_error.eps')\n",
+    "    fig.savefig(outpath, bbox_inches=\"tight\", format='eps')\n",
+    "    outpath = os.path.join(distancepath, f'{structure}_error.png')\n",
     "    fig.savefig(outpath, bbox_inches=\"tight\")\n"
    ]
   },
@@ -279,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
