--- a/src/registration/notebooks/register_images.ipynb
+++ b/src/registration/notebooks/register_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,13 +30,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA = '/net/birdstore/Active_Atlas_Data/data_root/pipeline_data'\n",
-    "moving_path = os.path.join(DATA, 'MD585/preps/CH1/thumbnail_aligned/200.tif')\n",
-    "fixed_path = os.path.join(DATA, 'MD589/preps/CH1/thumbnail_aligned/200.tif')"
+    "DATA = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration'\n",
+    "fixed_path = os.path.join(DATA, 'Allen_25um_sagittal.tif')\n",
+    "moving_path = os.path.join(DATA, 'Atlas_25um_sagittal.tif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fixed shape=(456, 586, 790) dtype=uint16\n",
+      "moving shape=(447, 586, 790) dtype=uint8\n"
+     ]
+    }
+   ],
+   "source": [
+    "fixed_volume = io.imread(fixed_path)\n",
+    "moving_volume = io.imread(moving_path)\n",
+    "print(f'fixed shape={fixed_volume.shape} dtype={fixed_volume.dtype}')\n",
+    "print(f'moving shape={moving_volume.shape} dtype={moving_volume.dtype}')"
    ]
   },
   {
@@ -66,14 +87,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fixed image shape=(586, 790) dtype=uint16\n",
+      "Fixed image shape=(586, 790) dtype=uint16\n",
+      "moving image shape=(586, 790) dtype=uint8\n"
+     ]
+    }
+   ],
    "source": [
     "fixed_midpoint = fixed_volume.shape[0] // 2\n",
     "fixed_image = fixed_volume[fixed_midpoint,:,:]\n",
-    "#del fixed_volume\n",
-    "print(f'Fixed image shape={fixed_image.shape} dtype={fixed_image.dtype}')"
+    "print(f'Fixed image shape={fixed_image.shape} dtype={fixed_image.dtype}')\n",
+    "moving_midpoint = moving_volume.shape[0] // 2\n",
+    "moving_image = moving_volume[moving_midpoint,:,:]\n",
+    "print(f'Fixed image shape={fixed_image.shape} dtype={fixed_image.dtype}')\n",
+    "print(f'moving image shape={moving_image.shape} dtype={moving_image.dtype}')"
    ]
   },
   {
@@ -327,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
