Updated the instructions for creating an average brain

--- a/src/atlas/notebooks/landmark-registration-analytical.ipynb
+++ b/src/atlas/notebooks/landmark-registration-analytical.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/preprocessing-pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,18 +121,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(moving_point_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n=37, min=1461.4213992206357 max=2011.7611306763042, mean=1713.9754241863236\n",
+      "RtTg distance from Allen=1461.42 micrometers\n",
+      "3N_R distance from Allen=1469.61 micrometers\n",
+      "VLL_R distance from Allen=1478.92 micrometers\n",
+      "3N_L distance from Allen=1531.06 micrometers\n",
+      "4N_R distance from Allen=1533.51 micrometers\n",
+      "Sp5O_R distance from Allen=1576.05 micrometers\n",
+      "SNR_R distance from Allen=1583.73 micrometers\n",
+      "4N_L distance from Allen=1601.43 micrometers\n",
+      "Sp5O_L distance from Allen=1617.98 micrometers\n",
+      "6N_R distance from Allen=1619.5 micrometers\n",
+      "7n_R distance from Allen=1634.37 micrometers\n",
+      "PBG_R distance from Allen=1678.08 micrometers\n",
+      "7N_R distance from Allen=1682.24 micrometers\n",
+      "6N_L distance from Allen=1682.47 micrometers\n",
+      "5N_R distance from Allen=1686.99 micrometers\n",
+      "SNC_R distance from Allen=1688.14 micrometers\n",
+      "LC_R distance from Allen=1688.98 micrometers\n",
+      "7n_L distance from Allen=1694.82 micrometers\n",
+      "SNR_L distance from Allen=1697.37 micrometers\n",
+      "7N_L distance from Allen=1716.33 micrometers\n",
+      "LRt_L distance from Allen=1725.51 micrometers\n",
+      "Sp5I_R distance from Allen=1731.09 micrometers\n",
+      "Sp5C_L distance from Allen=1735.89 micrometers\n",
+      "SNC_L distance from Allen=1737.27 micrometers\n",
+      "5N_L distance from Allen=1743.74 micrometers\n",
+      "VLL_L distance from Allen=1754.12 micrometers\n",
+      "AP distance from Allen=1760.47 micrometers\n",
+      "LC_L distance from Allen=1768.1 micrometers\n",
+      "PBG_L distance from Allen=1792.33 micrometers\n",
+      "Sp5I_L distance from Allen=1833.28 micrometers\n",
+      "SC distance from Allen=1839.37 micrometers\n",
+      "LRt_R distance from Allen=1858.55 micrometers\n",
+      "IC distance from Allen=1868.7 micrometers\n",
+      "Amb_L distance from Allen=1952.62 micrometers\n",
+      "DC_R distance from Allen=1974.5 micrometers\n",
+      "Amb_R distance from Allen=2006.77 micrometers\n",
+      "DC_L distance from Allen=2011.76 micrometers\n"
+     ]
+    }
+   ],
    "source": [
     "distances = []\n",
     "sortme = {}\n",
