Fixed the COm problem when creating an atlas

--- a/src/atlas/notebooks/landmark-registration-analytical.ipynb
+++ b/src/atlas/notebooks/landmark-registration-analytical.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,15 +87,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "moving_coms = brain.get_coms(annotator_id=1)\n",
     "allen_coms = brain.fixed_brain.get_coms(annotator_id=1)\n",
-    "common_keys = sorted(allen_coms.keys() & moving_coms.keys())\n",
+    "common_keys = sorted(allen_coms.keys() & moving_coms.keys() & brain.midbrain_keys)\n",
     "allen_points = np.array([allen_coms[s] for s in common_keys])\n",
     "moving_points = np.array([moving_coms[s] for s in common_keys])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3N_L',\n",
+       " '3N_R',\n",
+       " '4N_L',\n",
+       " '4N_R',\n",
+       " 'IC',\n",
+       " 'PBG_L',\n",
+       " 'PBG_R',\n",
+       " 'SC',\n",
+       " 'SNC_L',\n",
+       " 'SNC_R',\n",
+       " 'SNR_L',\n",
+       " 'SNR_R']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "common_keys"
    ]
   },
   {
@@ -111,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "37"
+       "12"
       ]
      },
      "execution_count": 6,
@@ -141,51 +172,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n=37, min=1461.4213992206357 max=2011.7611306763042, mean=1713.9754241863236\n",
-      "RtTg distance from Allen=1461.42 micrometers\n",
-      "3N_R distance from Allen=1469.61 micrometers\n",
-      "VLL_R distance from Allen=1478.92 micrometers\n",
-      "3N_L distance from Allen=1531.06 micrometers\n",
-      "4N_R distance from Allen=1533.51 micrometers\n",
-      "Sp5O_R distance from Allen=1576.05 micrometers\n",
-      "SNR_R distance from Allen=1583.73 micrometers\n",
-      "4N_L distance from Allen=1601.43 micrometers\n",
-      "Sp5O_L distance from Allen=1617.98 micrometers\n",
-      "6N_R distance from Allen=1619.5 micrometers\n",
-      "7n_R distance from Allen=1634.37 micrometers\n",
-      "PBG_R distance from Allen=1678.08 micrometers\n",
-      "7N_R distance from Allen=1682.24 micrometers\n",
-      "6N_L distance from Allen=1682.47 micrometers\n",
-      "5N_R distance from Allen=1686.99 micrometers\n",
-      "SNC_R distance from Allen=1688.14 micrometers\n",
-      "LC_R distance from Allen=1688.98 micrometers\n",
-      "7n_L distance from Allen=1694.82 micrometers\n",
-      "SNR_L distance from Allen=1697.37 micrometers\n",
-      "7N_L distance from Allen=1716.33 micrometers\n",
-      "LRt_L distance from Allen=1725.51 micrometers\n",
-      "Sp5I_R distance from Allen=1731.09 micrometers\n",
-      "Sp5C_L distance from Allen=1735.89 micrometers\n",
-      "SNC_L distance from Allen=1737.27 micrometers\n",
-      "5N_L distance from Allen=1743.74 micrometers\n",
-      "VLL_L distance from Allen=1754.12 micrometers\n",
-      "AP distance from Allen=1760.47 micrometers\n",
-      "LC_L distance from Allen=1768.1 micrometers\n",
-      "PBG_L distance from Allen=1792.33 micrometers\n",
-      "Sp5I_L distance from Allen=1833.28 micrometers\n",
-      "SC distance from Allen=1839.37 micrometers\n",
-      "LRt_R distance from Allen=1858.55 micrometers\n",
-      "IC distance from Allen=1868.7 micrometers\n",
-      "Amb_L distance from Allen=1952.62 micrometers\n",
-      "DC_R distance from Allen=1974.5 micrometers\n",
-      "Amb_R distance from Allen=2006.77 micrometers\n",
-      "DC_L distance from Allen=2011.76 micrometers\n"
+      "n=12, min=721.4915928131109 max=1098.0319691156537, mean=946.013322070747\n",
+      "SNC_R distance from Allen=721.49 micrometers\n",
+      "SNC_L distance from Allen=793.62 micrometers\n",
+      "PBG_L distance from Allen=829.22 micrometers\n",
+      "SNR_L distance from Allen=874.38 micrometers\n",
+      "SNR_R distance from Allen=937.88 micrometers\n",
+      "IC distance from Allen=940.53 micrometers\n",
+      "PBG_R distance from Allen=977.88 micrometers\n",
+      "SC distance from Allen=1016.55 micrometers\n",
+      "3N_L distance from Allen=1035.79 micrometers\n",
+      "4N_L distance from Allen=1049.88 micrometers\n",
+      "4N_R distance from Allen=1076.9 micrometers\n",
+      "3N_R distance from Allen=1098.03 micrometers\n"
      ]
     }
    ],
@@ -242,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,58 +257,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1763.99609251],\n",
+       "       [ -994.38034956],\n",
+       "       [  202.30461861]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n, a1, a2 = cv2.estimateAffine3D(src=moving_points, dst=allen_points)\n",
-    "a2.shape\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "R3 = a1[:,0:3]\n",
-    "t3 = a1[:,-1].reshape(3,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t3.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "reg_points = R @ moving_points.T + t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg_points3 = R3 @ moving_points.T + t3"
    ]
   },
   {
@@ -321,14 +302,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean\n",
+      "[9109.68666667 4010.52333333 5691.12833333]\n",
+      "[9109.68666667 4010.52333333 5691.12833333]\n",
+      "Min\n",
+      "[8354.09 2325.   3551.05]\n",
+      "[8228.68088835 2264.45040905 3525.33562864]\n",
+      "Max\n",
+      "[10400.    5167.29  7833.27]\n",
+      "[10366.46591136  5030.31025861  7835.449059  ]\n"
+     ]
+    }
+   ],
    "source": [
     "print('Mean')\n",
     "print(np.mean(allen_points, axis=0))\n",
     "print(np.mean(reg_points, axis=1))\n",
-    "print(np.mean(reg_points3, axis=1))\n",
     "print('Min')\n",
     "print(np.min(allen_points, axis=0))\n",
     "print(np.min(reg_points, axis=1))\n",
@@ -339,40 +335,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg_point_dict = {s:moving_coms[s] for s in common_keys}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n=12, min=98.58314289126439 max=261.7483262163751, mean=196.5790116749173\n",
+      "IC 98.58\n",
+      "PBG_R 122.35\n",
+      "PBG_L 176.88\n",
+      "SNR_R 178.23\n",
+      "SC 178.82\n",
+      "4N_L 194.27\n",
+      "3N_L 203.74\n",
+      "4N_R 223.61\n",
+      "3N_R 234.29\n",
+      "SNC_L 237.07\n",
+      "SNR_L 249.37\n",
+      "SNC_R 261.75\n"
+     ]
+    }
+   ],
    "source": [
     "distances = []\n",
-    "distances2 = []\n",
     "sortme = {}\n",
     "for structure in common_keys:\n",
     "    (x,y,z) = allen_point_dict[structure]\n",
     "    allen_point = np.array([x,y,z])    \n",
     "    moving_point = np.array(moving_point_dict[structure])\n",
     "    reg_point = brain_to_atlas_transform(moving_point, R, t)\n",
-    "    reg_point3 = brain_to_atlas_transform(moving_point, R3, t3)\n",
     "    d = calculate_distance(allen_point, reg_point)\n",
-    "    ds = calculate_distance(allen_point, reg_point3)\n",
-    "    distances2.append(ds)\n",
     "    distances.append(d)\n",
-    "    print(f'{structure} COM={reg_point.round()} distance={round(d,2)} cv2={round(ds,2)}')\n",
+    "    #print(f'{structure} COM={reg_point.round()} distance={round(d,2)}')\n",
     "    sortme[structure] = d\n",
     "\n",
     "print(f'n={len(distances)}, min={min(distances)} max={max(distances)}, mean={np.mean(distances)}')\n",
-    "print(f'n={len(distances2)}, min={min(distances2)} max={max(distances2)}, mean={np.mean(distances2)}')\n",
-    "#ds = {k: v for k, v in sorted(sortme.items(), key=lambda item: item[1])}\n",
-    "#for structure, d in ds.items():\n",
-    "#    print(f'{structure} {round(d,2)}')"
+    "ds = {k: v for k, v in sorted(sortme.items(), key=lambda item: item[1])}\n",
+    "for structure, d in ds.items():\n",
+    "    print(f'{structure} {round(d,2)}')"
    ]
   },
   {
@@ -381,7 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg_points.shape"
+    "# all n=37, min=57.787495718601974 max=732.1160732177623, mean=307.6266899370127"
    ]
   },
   {
