Added some new notebooks for registration testing and deleted a redundant file in the utilities dir

--- a/src/registration/notebooks/registration_comparison.ipynb
+++ b/src/registration/notebooks/registration_comparison.ipynb
@@ -38,79 +38,7 @@
     "def compare_two_images(img1, img2):\n",
     "    plt.figure(figsize=[20,20])\n",
     "    plt.imshow(img1,cmap='Blues')\n",
-    "    plt.imshow(img2,alpha=0.5,cmap='Reds')\n",
-    "    \n",
-    "# Callback invoked when the IterationEvent happens, update our data and display new figure.\n",
-    "def plot_values(registration_method):\n",
-    "    global metric_values, multires_iterations\n",
-    "\n",
-    "    metric_values.append(registration_method.GetMetricValue())\n",
-    "    # Clear the output area (wait=True, to reduce flickering), and plot current data\n",
-    "    clear_output(wait=True)\n",
-    "    # Plot the similarity metric values\n",
-    "    plt.plot(metric_values, 'r')\n",
-    "    plt.plot(multires_iterations, [metric_values[index] for index in multires_iterations], 'b*')\n",
-    "    plt.xlabel('Iteration Number', fontsize=12)\n",
-    "    plt.ylabel('Metric Value', fontsize=12)\n",
-    "    plt.show()\n",
-    "\n",
-    "# Callback invoked when the sitkMultiResolutionIterationEvent happens, update the index into the\n",
-    "# metric_values list.\n",
-    "def update_multires_iterations():\n",
-    "    global metric_values, multires_iterations\n",
-    "    multires_iterations.append(len(metric_values))\n",
-    "\n",
-    "def start_plot():\n",
-    "    global metric_values, multires_iterations\n",
-    "    metric_values = []\n",
-    "    multires_iterations = []\n",
-    "\n",
-    "# Callback invoked when the EndEvent happens, do cleanup of data and figure.\n",
-    "def end_plot():\n",
-    "    global metric_values, multires_iterations\n",
-    "    del metric_values\n",
-    "    del multires_iterations\n",
-    "    # Close figure, we don't want to get a duplicate of the plot latter on.\n",
-    "    plt.close()\n",
-    "\n",
-    "def register_test(INPUT, fixed_index, moving_index):\n",
-    "    pixelType = sitk.sitkFloat32\n",
-    "    fixed_file = os.path.join(INPUT, f'{fixed_index}.tif')\n",
-    "    moving_file = os.path.join(INPUT, f'{moving_index}.tif')\n",
-    "    fixed = sitk.ReadImage(fixed_file, pixelType);\n",
-    "    moving = sitk.ReadImage(moving_file, pixelType)\n",
-    "\n",
-    "    initial_transform = sitk.CenteredTransformInitializer(\n",
-    "        fixed, moving,\n",
-    "        sitk.Euler2DTransform(),\n",
-    "        sitk.CenteredTransformInitializerFilter.MOMENTS)\n",
-    "\n",
-    "    R = sitk.ImageRegistrationMethod()\n",
-    "    R.SetInitialTransform(initial_transform, inPlace=True)\n",
-    "    #R.SetMetricAsCorrelation() # -0439\n",
-    "    #R.SetMetricAsMeanSquares()\n",
-    "    R.SetMetricAsMattesMutualInformation()\n",
-    "    R.SetMetricSamplingStrategy(R.REGULAR) # random = 0.442 # regular -0.439\n",
-    "    R.SetMetricSamplingPercentage(0.8)\n",
-    "    R.SetInterpolator(sitk.sitkLinear)\n",
-    "    # Optimizer settings.\n",
-    "    R.SetOptimizerAsRegularStepGradientDescent(learningRate=1,\n",
-    "                                               minStep=1e-4,\n",
-    "                                               numberOfIterations=100,\n",
-    "                                               gradientMagnitudeTolerance=1e-8)\n",
-    "    R.SetOptimizerScalesFromPhysicalShift()\n",
-    "\n",
-    "    # Connect all of the observers so that we can perform plotting during registration.\n",
-    "    R.AddCommand(sitk.sitkStartEvent, start_plot)\n",
-    "    R.AddCommand(sitk.sitkEndEvent, end_plot)\n",
-    "    R.AddCommand(sitk.sitkMultiResolutionIterationEvent, update_multires_iterations)\n",
-    "    R.AddCommand(sitk.sitkIterationEvent, lambda: plot_values(R))\n",
-    "\n",
-    "\n",
-    "    final_transform = R.Execute(sitk.Cast(fixed, sitk.sitkFloat32),\n",
-    "                                                   sitk.Cast(moving, sitk.sitkFloat32))\n",
-    "\n",
-    "    return final_transform, fixed, moving, R\n"
+    "    plt.imshow(img2,alpha=0.5,cmap='Reds')"
    ]
   },
   {
@@ -131,27 +59,7 @@
    "outputs": [],
    "source": [
     "fixed_index = str(105).zfill(3)\n",
-    "moving_index = str(106).zfill(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_transform, fixed, moving, R = register_test(INPUT, fixed_index, moving_index)\n",
-    "testParameters = final_transform.GetParameters()\n",
-    "testFixedParameters = final_transform.GetFixedParameters()\n",
-    "# Always check the reason optimization terminated.\n",
-    "stop_condition = R.GetOptimizerStopConditionDescription()\n",
-    "iterations = R.GetOptimizerIteration()\n",
-    "metric_value = R.GetMetricValue()\n",
-    "\n",
-    "print(f'Final metric value: {metric_value}')\n",
-    "print(f'Optimizer\\'s stopping condition, {stop_condition}')\n",
-    "print('final', testParameters)\n",
-    "print('fixed', testFixedParameters)"
+    "moving_index = str(106).zfill(3) # big image"
    ]
   },
   {
@@ -172,15 +80,14 @@
     "elastixImageFilter.SetMovingImage(moving)\n",
     "elastixImageFilter.SetParameterMap(sitk.GetDefaultParameterMap(\"translation\"))\n",
     "elastixImageFilter.AddParameterMap(sitk.GetDefaultParameterMap(\"rigid\"))\n",
+    "elastixImageFilter.AddParameterMap(sitk.GetDefaultParameterMap(\"affine\"))\n",
     "elastixImageFilter.SetParameter(\"NumberOfResolutions\", \"8\")\n",
-    "elastixImageFilter.SetParameter(\"MaximumNumberOfIterations\", \"500\")\n",
-    "\n",
-    "#elastixImageFilter.AddParameterMap(sitk.GetDefaultParameterMap(\"affine\"))\n",
+    "elastixImageFilter.SetParameter(\"MaximumNumberOfIterations\", \"1500\")\n",
     "elastixImageFilter.LogToConsoleOff()\n",
-    "resultImage = elastixImageFilter.Execute()\n",
+    "elastixImageFilter.Execute()\n",
     "trans_params = elastixImageFilter.GetTransformParameterMap()[0][\"TransformParameters\"]\n",
     "rigid_params = elastixImageFilter.GetTransformParameterMap()[1][\"TransformParameters\"]\n",
-    "#affine_params = elastixImageFilter.GetTransformParameterMap()[2][\"TransformParameters\"]\n",
+    "affine_params = elastixImageFilter.GetTransformParameterMap()[2][\"TransformParameters\"]\n",
     "\n",
     "x1,y1 = trans_params\n",
     "rotation,x2,y2 = rigid_params\n",
@@ -207,8 +114,8 @@
     "    ]\n",
     ")\n",
     "shift = center + (xshift, yshift) - np.dot(R, center)\n",
-    "T = np.vstack([np.column_stack([R, shift]), [0, 0, 1]])\n",
-    "T"
+    "Trigid = np.vstack([np.column_stack([R, shift]), [0, 0, 1]])\n",
+    "print(Trigid)"
    ]
   },
   {
@@ -217,7 +124,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rigid_params"
+    "print(affine_params)\n",
+    "r00,r01,xshift,r10,r11,yshift = [float(a) for a in affine_params]\n",
+    "width, height = get_image_size(moving_file)\n",
+    "center = np.array([width, height]) / 2\n",
+    "\n",
+    "#rotation, xshift, yshift = np.array([rotation, xshift, yshift]).astype(np.float16)\n",
+    "center = np.array(center).astype(np.float16)\n",
+    "R = np.array(\n",
+    "    [\n",
+    "        [r00, r01],\n",
+    "        [r10, r11],\n",
+    "    ]\n",
+    ")\n",
+    "shift = center + (xshift, yshift) - np.dot(R, center)\n",
+    "Taffine = np.vstack([np.column_stack([R, shift]), [0, 0, 1]])\n",
+    "print(Taffine)"
    ]
   },
   {
@@ -226,11 +148,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t1,t2,t3,t4,t5,t6 = [float(t) for t in affine_params]\n",
-    "#T = matrix([[math.cos(angle),math.sin(angle),-mnx],[-math.sin(angle),math.cos(angle),-mny],[0,0,1]])\n",
-    "T = np.array([[t1,t2,t3],[t4,t5,t6],[0,0,1]])\n",
-    "Tinv = np.linalg.inv(T)\n",
-    "Tinv"
+    "transform_parameters = np.array(affine_params, dtype=float).reshape(2,3)\n",
+    "affine_rotation = np.vstack([transform_parameters, [0, 0, 1]])\n",
+    "#Taffine = np.linalg.inv(affine_rotation)\n",
+    "Taffine = affine_rotation"
    ]
   },
   {
@@ -239,8 +160,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf = Tinv.flatten()[:6]\n",
-    "tf"
+    "Taffine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Trigid"
    ]
   },
   {
@@ -250,9 +179,13 @@
    "outputs": [],
    "source": [
     "im1 = Image.open(moving_file)\n",
-    "im2 = im1.transform((im1.size), Image.Transform.AFFINE, T.flatten()[:6], resample=Image.Resampling.NEAREST)\n",
-    "img = np.array(im2)\n",
-    "print(type(img), img.dtype, img.shape)"
+    "im2 = im1.transform((im1.size), Image.Transform.AFFINE, Trigid.flatten()[:6], resample=Image.Resampling.NEAREST)\n",
+    "rigidimg = np.array(im2)\n",
+    "del im1, im2\n",
+    "im1 = Image.open(moving_file)\n",
+    "im2 = im1.transform((im1.size), Image.Transform.AFFINE, Taffine.flatten()[:6], resample=Image.Resampling.NEAREST)\n",
+    "affineimg = np.array(im2)\n",
+    "del im1, im2"
    ]
   },
   {
@@ -261,11 +194,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1,2)\n",
+    "from scipy import ndimage as ndi\n",
+    "img = io.imread(moving_file)\n",
+    "affineimg = ndi.affine_transform(img, Trigid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fixed_index = str(105).zfill(3)\n",
+    "#moving_index = str(106).zfill(3) big image\n",
+    "fig, ax = plt.subplots(1,4)\n",
+    "fig.set_figheight(15)\n",
+    "fig.set_figwidth(15)\n",
     "ax[0].grid()\n",
     "ax[1].grid()\n",
-    "ax[0].imshow(sitk.GetArrayFromImage(moving), cmap=\"gray\")\n",
-    "ax[1].imshow(sitk.GetArrayFromImage(fixed), cmap=\"gray\")"
+    "ax[2].grid()\n",
+    "ax[3].grid()\n",
+    "ax[0].imshow(sitk.GetArrayFromImage(fixed), cmap=\"gray\")\n",
+    "ax[1].imshow(rigidimg, cmap=\"gray\")\n",
+    "ax[2].imshow(affineimg, cmap=\"gray\")\n",
+    "ax[3].imshow(sitk.GetArrayFromImage(moving), cmap=\"gray\")"
    ]
   },
   {
@@ -275,7 +227,7 @@
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(8, 6))\n",
-    "plt.title('unregistered moving image')\n",
+    "plt.title('fixed image')\n",
     "plt.grid()\n",
     "plt.imshow(sitk.GetArrayFromImage(fixed), cmap='gray')"
    ]
